--- a/taskpane.html
+++ b/taskpane.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8"/>
   <title>S1P Support Ticket</title>
   <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-  <script src="/taskpane.js"></script>
+  <script src="taskpane.js"></script>
+
 
   <style>
     body {
@@ -163,3 +164,4 @@
 
 </body>
 </html>
+
