--- a/taskpane.html
+++ b/taskpane.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <title>S1P Support Ticket</title>
+
+  <!-- Existing Outlook Add-in script (do NOT remove) -->
   <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+
+  <!-- NEW: Teams SDK (safe to load even inside Outlook) -->
+  <script src="https://res.cdn.office.net/teams-js/2.0.0/js/MicrosoftTeams.min.js"></script>
 
   <style>
     body {
@@ -114,13 +119,13 @@
     <option value="">-- Select a category --</option>
   </select>
 
-  <!-- SUBCATEGORY (software OR single-level IT subcategory) -->
+  <!-- SUBCATEGORY -->
   <label id="subcategory-label" class="hidden" for="subcategory">Subcategory:</label>
   <select id="subcategory" class="hidden">
     <option value="">-- Select a subcategory --</option>
   </select>
 
-  <!-- SUB-SUBCATEGORY (issue type for PMS / Imaging) -->
+  <!-- SUB-SUBCATEGORY -->
   <label id="subsubcategory-label" class="hidden" for="subsubcategory">Issue Type:</label>
   <select id="subsubcategory" class="hidden">
     <option value="">-- Select an issue type --</option>
@@ -160,8 +165,45 @@
 
 </div>
 
-<!-- IMPORTANT: load our JS after the DOM so getElementById works -->
+<!-- Existing Outlook logic -->
 <script src="taskpane.js"></script>
+
+<!-- NEW: Add Teams + Outlook host detection bootstrap -->
+<script>
+  (function () {
+    const isTeams = !!(window.microsoftTeams && microsoftTeams.app);
+
+    if (isTeams) {
+      // Initialize Teams — SAFE, DOES NOT AFFECT OUTLOOK
+      microsoftTeams.app.initialize().then(() => {
+        console.log("S1P Support: Running inside Microsoft Teams");
+
+        // Tell Teams the tab is ready
+        if (microsoftTeams.app.notifySuccess) {
+          microsoftTeams.app.notifySuccess();
+        }
+
+        // Get Teams context (optional)
+        microsoftTeams.app.getContext().then(ctx => {
+          console.log("Teams Context:", ctx);
+          // You can expose this to taskpane.js if needed
+          window.s1pTeamsContext = ctx;
+        });
+      }).catch(err => {
+        console.error("Teams initialization failed:", err);
+      });
+
+    } else if (window.Office && Office.onReady) {
+      // Outlook Add-in (unchanged)
+      Office.onReady().then(() => {
+        console.log("S1P Support: Running inside Outlook add-in");
+      });
+    } else {
+      console.log("S1P Support: Running as standalone webpage");
+    }
+
+  })();
+</script>
 
 </body>
 </html>
